# GenAI-Showcase

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SwigMenu_Playwright_OpenAI_MongoDB.ipynb  mongodb_as_a_toolbox_for_llamaindex_agents.ipynb  retrieval_strategies_mongodb_llamaindex_togetherai.ipynb  ruff.toml
.github/: CODEOWNERS
.github/hooks/: jupyter-widget-state.sh
.github/workflows/: tests.yml  webpack.yml
apps/: README.md
apps/CineMemroy/: .env example  .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml
apps/RT-voice-ts-store-agent/: README.md  declarations.d.ts  mongodb-seed.ts  package-lock.json  package.json  v0-user-next.config.js
apps/django_langchain_voyageai/: embedded_guinness_wine_dublin_cleaned2.json  guinness_wine_dublin_cleaned.json  json_upload.py  langchain_integration.py  requirements.txt  reviews_embedding.py
apps/graph_rag_demo/: .gitignore  README.md  (+13 more)
apps/voice-openai-mongo-rentals-agent/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
apps/voice-openai-mongo-rentals-agent/src/langchain_openai_voice/: __init__.py  utils.py
apps/voice-openai-mongo-rentals-agent/src/server/: __init__.py  app.py  prompt.py  tools.py  utils.py
apps/voice-openai-mongo-rentals-agent/src/server/static/: audio-playback-worklet.js  audio-processor-worklet.js  index.html
mcp/: README.md
misc/: README.md
notebooks/: README.md
partners/: README.md
resources/: README.md
tools/: README.md  function_calling_mongodb_as_a_toolbox.ipynb
workshops/: README.md
(+590 files in other folders)
